Automated code analysis fixes